# ntrancerator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
pygan/: .gitignore  README.md  export_onnx.py  gan_server.py  generate.py  pyproject.toml
specs/: features.md  gan-slider-spec.md  spectrogram-visualizer-spec.md  usb-input.md
src/: config.rs  gan.rs  lib.rs  main.rs
src/audio/: decode.rs  live.rs  mod.rs  playback.rs
src/dsp/: mod.rs  window.rs
src/render/: colormap.rs  gpu.rs  history.rs  mapping.rs  mod.rs  monitor.rs
src/render/shaders/: gan_image.wgsl  spectrogram.wgsl
tests/: e2e_audio.rs
